testsuite/tests/checks/declarations_in_blocks/test.out
declarations_in_blocks.adb:5:8: error: block statement with local declaration
5 |        declare                       --  FLAG
  |        ^^^^ 

